--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -50,23 +50,22 @@
     <link rel="apple-touch-icon"
           sizes="114x114"
           href="$APP_ROOT/app/cockpit/assets/images/camunda.114.png" />
-
   </head>
   <body>
     <!-- navigation -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-header">
         <button type="button"
-                class="navbar-toggle collapsed"
-                data-toggle="collapse"
-                data-target="#navbar-collapse">
+                class="navbar-toggle collapsed">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
 
-        <a class="navbar-brand" href="#/">
+        <a class="navbar-brand"
+           href="#/"
+           title="camunda Cockpit">
           camunda Cockpit
         </a>
       </div>
@@ -84,7 +83,7 @@
              sem-show-user-actions
              class="dropdown-toggle"
              data-toggle="dropdown">
-            <i class="glyphicon glyphicon-user "></i>
+            <span class="glyphicon glyphicon-user "></span>
             {{ authentication.name }}
           </a>
 
@@ -117,8 +116,8 @@
              sem-show-applications
              class="dropdown-toggle"
              data-toggle="dropdown">
-            <i class="glyphicon glyphicon-home"></i>
-            <b class="caret"></b>
+            <span class="glyphicon glyphicon-home"></span>
+            <span class="caret"></span>
           </a>
 
           <ul class="dropdown-menu dropdown-menu-right">
