refactor(HTML): improve CSS usage and correct HTML tag usage

--- a/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filter-modal-form-permission.html
@@ -2,7 +2,7 @@
 
   <div ng-show="!authorizationState.$loaded && !authorizationState.$error"
        class="loader">
-    <i class="animate-spin glyphicon glyphicon-refresh"></i>
+    <span class="animate-spin glyphicon glyphicon-refresh"></span>
     {{ 'LOADING' | translate }}
   </div>
 
