--- a/client/client/scripts/form/directives/cam-tasklist-form-external.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form-external.html
@@ -1,10 +1,10 @@
 <div class="text-help">
-  <i class="glyphicon glyphicon-info-sign"></i>
+  <span class="glyphicon glyphicon-info-sign"></span>
   {{ EXTERNAL_FORM_NOTE | translate }}
 </div>
 
 <a ng-href="{{ externalFormUrl  }}"
    class="external-form">
   {{ 'EXTERNAL_FORM_LINK' |translate }}
-  <i class="glyphicon glyphicon-folder-open"></i>
+  <span class="glyphicon glyphicon-folder-open"></span>
 </a>
