--- a/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
+++ b/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
@@ -16,7 +16,7 @@
 
   <div ng-show="!modalGroupsState.$loaded && !modalGroupsState.$error"
        class="loader">
-    <i class="animate-spin glyphicon glyphicon-refresh"></i>
+    <span class="animate-spin glyphicon glyphicon-refresh"></span>
     {{ 'LOADING' | translate }}
   </div>
 
