--- a/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-description-plugin.html
+++ b/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-description-plugin.html
@@ -1,7 +1,7 @@
 <div class="description-pane">
   <div ng-hide="task.description"
        class="well">
-    <i class="glyphicon glyphicon-info-sign"></i>
+    <span class="glyphicon glyphicon-info-sign"></span>
     {{ 'NO_DESCRIPTION' | translate }}
   </div>
   <div ng-show="task.description">
