--- a/client/client/scripts/filter/directives/cam-tasklist-filters.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filters.html
@@ -1,6 +1,6 @@
 <div ng-show="!state.$loaded && !state.$error"
      class="loader">
-  <i class="animate-spin glyphicon glyphicon-refresh"></i>
+  <span class="animate-spin glyphicon glyphicon-refresh"></span>
   {{ 'LOADING' | translate }}
 </div>
 
@@ -14,7 +14,7 @@
 
   <div ng-hide="totalItems"
        class="well">
-    <i class="glyphicon glyphicon-info-sign"></i>
+    <span class="glyphicon glyphicon-info-sign"></span>
     {{ 'NO_AVAILABLE_FILTER' | translate }}
   </div>
 
