--- a/client/client/scripts/form/directives/cam-tasklist-form-generic.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form-generic.html
@@ -1,7 +1,7 @@
 <div class="generic-form-fields">
 
   <div class="text-help">
-    <i class="glyphicon glyphicon-info-sign"></i>
+    <span class="glyphicon glyphicon-info-sign"></span>
     {{ 'USE_GENERIC_FORM' | translate }}
   </div>
 
