--- a/client/client/scripts/process/plugins/action/cam-tasklist-navbar-action-start-process-plugin.html
+++ b/client/client/scripts/process/plugins/action/cam-tasklist-navbar-action-start-process-plugin.html
@@ -1,5 +1,5 @@
 <a ng-click="open()"
    href>
-  <i class="glyphicon glyphicon-list-alt"></i>
+  <span class="glyphicon glyphicon-list-alt"></span>
   {{ 'START_PROCESS' | translate }}
 </a>
