impr(footer): use the footer widget
related to CAM-3438

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -183,11 +183,7 @@
     </div>
 
     <!-- footer -->
-    <footer>
-      <div>
-        Powered by <a href="http://camunda.org">camunda BPM</a> / <span class="version">v${project.version}</span>
-      </div>
-    </footer>
+    <footer cam-widget-footer></footer>
 
     <script type="application/javascript">
       window.PLUGIN_DEPENDENCIES = $PLUGIN_DEPENDENCIES || [];
