impr(footer): use the footer widget
related to CAM-3438

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -76,17 +76,8 @@
 
 
   <!-- # page-footer -->
-  <footer class="page">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-12">
-          Powered by <a href="http://camunda.org">camunda BPM</a> /
-          <span class="version">v${project.version}</span>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- / page-footer -->
+  <footer cam-widget-footer></footer>
+
 
   <script type="text/javascript">
     // override the following line to include configuration
