impr(HTML): remove data- prefix on angular directives

--- a/client/client/scripts/pages/groupCreate.html
+++ b/client/client/scripts/pages/groupCreate.html
@@ -64,8 +64,8 @@
 
             <button type="submit"
                     class="btn btn-primary"
-                    data-ng-disabled="!createGroupForm.$valid"
-                    data-ng-click="createGroup()">
+                    ng-disabled="!createGroupForm.$valid"
+                    ng-click="createGroup()">
               Create new Group
             </button>
           </div>
