--- a/client/client/scripts/pages/groupEdit.html
+++ b/client/client/scripts/pages/groupEdit.html
@@ -70,8 +70,8 @@
                 <div class="col-sm-8 col-sm-offset-4">
                   <button type="submit"
                           class="btn btn-default"
-                          data-ng-disabled="!canSubmit(editGroupForm, 'group')"
-                          data-ng-click="updateGroup()">Update Group</button>
+                          ng-disabled="!canSubmit(editGroupForm, 'group')"
+                          ng-click="updateGroup()">Update Group</button>
                 </div>
               </div>
             </form>
@@ -88,7 +88,7 @@
 
               <button type="submit"
                       class="btn btn-danger"
-                      data-ng-click="deleteGroup()">
+                      ng-click="deleteGroup()">
                 Delete Group
               </button>
             </form>
