--- a/client/client/scripts/pages/setup.html
+++ b/client/client/scripts/pages/setup.html
@@ -150,8 +150,8 @@
             <div class="col-sm-8 col-sm-offset-4">
               <button type="submit"
                       class="btn btn-primary"
-                      data-ng-disabled="!createUserForm.$valid"
-                      data-ng-click="createUser()">Create new User</button>
+                      ng-disabled="!createUserForm.$valid"
+                      ng-click="createUser()">Create new User</button>
             </div>
           </div>
 
