--- a/client/client/scripts/pages/userCreate.html
+++ b/client/client/scripts/pages/userCreate.html
@@ -142,8 +142,8 @@
 
             <button type="submit"
                     class="btn btn-primary"
-                    data-ng-disabled="!createUserForm.$valid"
-                    data-ng-click="createUser()">Create new User</button>
+                    ng-disabled="!createUserForm.$valid"
+                    ng-click="createUser()">Create new User</button>
           </div>
         </div>
 
