--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -53,86 +53,9 @@
   </head>
   <body>
     <!-- navigation -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-header">
-        <button type="button"
-                class="navbar-toggle collapsed">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-
-        <a class="navbar-brand"
-           href="#/"
-           title="camunda Cockpit">
-          camunda Cockpit
-        </a>
-      </div>
-
-      <ul ng-cloak
-          class="nav navbar-nav pull-right"
-          ng-controller="AuthenticationController">
-
-        <li engine-select></li>
-
-        <li class="dropdown"
-          cam-if-logged-in
-          ng-cloak>
-          <a href
-             sem-show-user-actions
-             class="dropdown-toggle"
-             data-toggle="dropdown">
-            <span class="glyphicon glyphicon-user "></span>
-            {{ authentication.name }}
-          </a>
-
-          <ul class="dropdown-menu dropdown-menu-right">
-            <li>
-              <a sem-jump-to-profile
-                 ng-href="{{ '../../admin/:engine/#/users/' + authentication.name + '?tab=profile' | uri }}">
-                My Profile
-              </a>
-            </li>
-
-            <li class="divider"></li>
-
-            <li>
-              <a href
-                 sem-log-out
-                 ng-click="logout()">
-                Sign out
-              </a>
-            </li>
-          </ul>
-        </li>
-
-        <li class="divider-vertical"
-            cam-if-logged-in
-            ng-cloak></li>
-
-        <li class="app-switch dropdown">
-          <a href
-             sem-show-applications
-             class="dropdown-toggle"
-             data-toggle="dropdown">
-            <span class="glyphicon glyphicon-home"></span>
-            <span class="caret"></span>
-          </a>
-
-          <ul class="dropdown-menu dropdown-menu-right">
-            <li ng-if="!authentication || authentication.canAccess('admin')">
-              <a sem-jump-to-admin
-                 ng-href="{{ '../../admin/:engine/' | uri }}">Admin</a>
-            </li>
-
-            <li ng-if="!authentication || authentication.canAccess('tasklist')">
-              <a sem-jump-to-tasklist
-                 ng-href="{{ '../../tasklist/:engine/' | uri }}">Tasklist</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
+    <div cam-widget-header
+         authentication="authentication"
+         brand-name="Camunda Cockpit">
     </div>
 
     <!-- content -->
