fix(header): pass the current app name
related to CAM-3437

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -55,6 +55,7 @@
     <!-- navigation -->
     <div cam-widget-header
          authentication="authentication"
+         current-app="admin"
          brand-name="Camunda Admin">
       <ul ng-cloak
           cam-if-logged-in
