--- a/client/client/scripts/pages/authorizations.html
+++ b/client/client/scripts/pages/authorizations.html
@@ -22,22 +22,21 @@
 
       <div class="col-md-9">
 
-        <div>
-          <div class="box auth-box">
+        <form class="form-horizontal"
+              name="createAuthForm"
+              ng-controller="AuthorizationCreateController">
 
-          <form class="form-horizontal"
-                name="createAuthForm"
-                ng-controller="AuthorizationCreateController">
+          <legend>{{title}} Authorizations</legend>
 
-            <legend>{{title}} Authorizations</legend>
-
+          <div cam-widget-loader
+               loading-state="{{ loadingState }}">
             <table class="cam-table">
               <thead>
                 <tr>
                   <th class="type">Type</th>
                   <th class="user group">User / Group</th>
                   <th class="permissions">Permissions</th>
-                  <th class="resource-id uuid">Resource Id</th>
+                  <th class="resource-id">Resource Id</th>
                   <th class="action">Action</th>
                 </tr>
               </thead>
@@ -66,14 +65,14 @@
                     {{formatPermissions(authorization.permissions)}}
                   </td>
 
-                  <td class="resource-id uuid">
+                  <td class="resource-id">
                     {{authorization.resourceId}}
                   </td>
 
                   <td class="action">
                     <a class="btn btn-link btn-sm"
                        ng-click="deleteAuthorization(authorization)">
-                      delete
+                      Delete
                     </a>
                   </td>
                 </tr>
@@ -186,11 +185,8 @@
                 </tr>
               </tbody>
             </table>
-
-            </form>
-
           </div>
-        </div>
+        </form>
 
       </div>
     </div>
