--- a/client/client/scripts/pages/groupEdit.html
+++ b/client/client/scripts/pages/groupEdit.html
@@ -21,87 +21,81 @@
       </div>
 
       <div class="col-md-9">
-        <div ng-show="show('group')">
-          <div class="box">
-            <p ng-if="!group">
-              <span class="glyphicon glyphicon-loading"></span>
-              loading group...
-            </p>
+        <form ng-show="show('group')"
+              class="form-horizontal"
+              name="editGroupForm"
+              cam-widget-loader
+              loading-state="{{ groupLoadingState }}">
+          <legend>Group</legend>
 
-            <form class="form-horizontal"
-                  name="editGroupForm"
-                  ng-if="group">
-              <legend>Group</legend>
+          <div class="form-group">
+            <label class="control-label col-sm-4"
+                   for="inputName">Group Name*</label>
 
-              <div class="form-group">
-                <label class="control-label col-sm-4"
-                       for="inputName">Group Name*</label>
+            <div class="col-sm-8">
+              <input id="inputName"
+                     name="groupName"
+                     class="form-control"
+                     type="text"
+                     ng-model="group.name"
+                     novalidate
+                     required
+                     ng-disabled="!availableOperations.update" />
 
-                <div class="col-sm-8">
-                  <input id="inputName"
-                         name="groupName"
-                         class="form-control"
-                         type="text"
-                         ng-model="group.name"
-                         novalidate
-                         required
-                         ng-disabled="!availableOperations.update" />
-
-                  <p class="text-danger"
-                     ng-show="createGroupForm.groupName.$error.required">
-                    Name is required.
-                  </p>
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label class="control-label col-sm-4"
-                       for="inputType">Group Type</label>
-
-                <div class="col-sm-8">
-                  <input id="inputType"
-                         name="groupType"
-                         class="form-control"
-                         type="text"
-                         ng-model="group.type"
-                         ng-disabled="!availableOperations.update" />
-                </div>
-              </div>
-
-              <div class="form-group"
-                   ng-show="availableOperations.update">
-                <div class="col-sm-8 col-sm-offset-4">
-                  <button type="submit"
-                          class="btn btn-default"
-                          ng-disabled="!canSubmit(editGroupForm, 'group')"
-                          ng-click="updateGroup()">Update Group</button>
-                </div>
-              </div>
-            </form>
+              <p class="text-danger"
+                 ng-show="createGroupForm.groupName.$error.required">
+                Name is required.
+              </p>
+            </div>
           </div>
 
-          <div class="box"
-               ng-show="availableOperations.delete">
-            <form class="form-horizontal">
-              <legend>Delete Group</legend>
+          <div class="form-group">
+            <label class="control-label col-sm-4"
+                   for="inputType">Group Type</label>
 
-              <div class="alert alert-danger">
-                <strong>Warning:</strong> deleting a group cannot be undone.
-              </div>
+            <div class="col-sm-8">
+              <input id="inputType"
+                     name="groupType"
+                     class="form-control"
+                     type="text"
+                     ng-model="group.type"
+                     ng-disabled="!availableOperations.update" />
+            </div>
+          </div>
 
+          <div class="form-group"
+               ng-show="availableOperations.update">
+            <div class="col-sm-8 col-sm-offset-4">
               <button type="submit"
-                      class="btn btn-danger"
-                      ng-click="deleteGroup()">
-                Delete Group
-              </button>
-            </form>
+                      class="btn btn-default"
+                      ng-disabled="!canSubmit(editGroupForm, 'group')"
+                      ng-click="updateGroup()">Update Group</button>
+            </div>
           </div>
-        </div>
-        <div class="box"
-             ng-show="show('users')">
-            <legend>Users ({{groupUserList.length}})</legend>
+        </form>
 
-            <table class="table" ng-hide="groupUserList.length == 0">
+        <form class="form-horizontal"
+              ng-show="show('group') && availableOperations.delete">
+          <legend>Delete Group</legend>
+
+          <div class="alert alert-danger">
+            <strong>Warning:</strong> deleting a group cannot be undone.
+          </div>
+
+          <button type="submit"
+                  class="btn btn-danger"
+                  ng-click="deleteGroup()">
+            Delete Group
+          </button>
+        </form>
+
+        <div ng-show="show('users')">
+          <legend>Users {{ groupUserList.length ? ('('+ groupUserList.length +')') : '' }}</legend>
+
+          <div cam-widget-loader
+               loading-state="{{ userLoadingState }}"
+               text-empty="Group {{group.name}} does not currently have any users.">
+            <table class="cam-table">
               <thead>
                 <tr>
                   <th>
@@ -122,11 +116,10 @@
                 </tr>
               </tbody>
             </table>
+          </div><!-- /cam-widget-loader -->
 
-            <p ng-show="groupUserList.length == 0">Group {{group.name}}
-              does not currently have any users</p>
-          </div>
         </div>
+      </div>
     </div>
   </section>
 </div>
