--- a/client/client/scripts/pages/groups.html
+++ b/client/client/scripts/pages/groups.html
@@ -12,40 +12,43 @@
     </a>
   </div>
 
-  <table class="cam-table">
-    <thead>
-      <tr>
-        <th class="icon"><!-- icons --></th>
-        <th class="group-id">Group Id</th>
-        <th class="group-name">Group Name</th>
-        <th class="group-type">Group Type</th>
-        <th class="action"><!-- actions --></th>
-      </tr>
-    </thead>
+  <div cam-widget-loader
+       loading-state="{{ loadingState }}">
+    <table class="cam-table">
+      <thead>
+        <tr>
+          <th class="icon"><!-- icons --></th>
+          <th class="group-id">Group Id</th>
+          <th class="group-name">Group Name</th>
+          <th class="group-type">Group Type</th>
+          <th class="action"><!-- actions --></th>
+        </tr>
+      </thead>
 
-    <tbody>
-      <tr ng-repeat="group in groupList">
-        <td class="icon">
-          <span class="glyphicon glyphicon-th"></span>
-        </td>
+      <tbody>
+        <tr ng-repeat="group in groupList">
+          <td class="icon">
+            <span class="glyphicon glyphicon-th"></span>
+          </td>
 
-        <td class="group-id">
-          <a href="#/groups/{{group.id | escape}}">{{group.id}}</a>
-        </td>
+          <td class="group-id">
+            <a href="#/groups/{{group.id | escape}}">{{group.id}}</a>
+          </td>
 
-        <td class="group-name">
-          {{group.name}}
-        </td>
+          <td class="group-name">
+            {{group.name}}
+          </td>
 
-        <td class="group-type">
-          {{group.type}}
-        </td>
+          <td class="group-type">
+            {{group.type}}
+          </td>
 
-        <td class="action">
-          <a href="#/groups/{{group.id | escape}}">Edit</a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+          <td class="action">
+            <a href="#/groups/{{group.id | escape}}">Edit</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 <!-- / CE - camunda-admin-ui/client/scripts/pages/groups.html -->
