--- a/client/client/scripts/pages/users.html
+++ b/client/client/scripts/pages/users.html
@@ -11,36 +11,39 @@
     </a>
   </div>
 
-  <table class="cam-table">
-    <thead>
-      <tr>
-        <th class="picture"><!-- pictures --></th>
-        <th class="name">Name</th>
-        <th class="username">Username</th>
-        <th class="action"><!-- actions --></th>
-      </tr>
-    </thead>
+  <div cam-widget-loader
+       loading-state="{{ loadingState }}">
+    <table class="cam-table">
+      <thead>
+        <tr>
+          <th class="picture"><!-- pictures --></th>
+          <th class="name">Name</th>
+          <th class="username">Username</th>
+          <th class="action"><!-- actions --></th>
+        </tr>
+      </thead>
 
-    <tbody>
-      <tr ng-repeat="user in userList">
-        <td class="picture">
-          <!-- add user pictures later -->
-          <span class="glyphicon glyphicon-user"></span>
-        </td>
+      <tbody>
+        <tr ng-repeat="user in userList">
+          <td class="picture">
+            <!-- add user pictures later -->
+            <span class="glyphicon glyphicon-user"></span>
+          </td>
 
-        <td class="name">
-          <a ng-href="#/users/{{user.id | escape}}">{{user.firstName}} {{user.lastName}}</a>
-        </td>
+          <td class="name">
+            <a ng-href="#/users/{{user.id | escape}}">{{user.firstName}} {{user.lastName}}</a>
+          </td>
 
-        <td class="username">
-          {{user.id}}
-        </td>
+          <td class="username">
+            {{user.id}}
+          </td>
 
-        <td class="action">
-          <a ng-href="#/users/{{user.id | escape}}">Edit</a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+          <td class="action">
+            <a ng-href="#/users/{{user.id | escape}}">Edit</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
 <!-- / CE - camunda-admin-ui/client/scripts/pages/users.html -->
