impr(breadcrumb): hide breadcrumbs when not needed
Related to CAM-3519

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -62,7 +62,8 @@
     <!-- content -->
     <div class="ctn-main">
       <div class="ctn-wrapper">
-        <div cam-breadcrumbs-panel
+        <div ng-if="showBreadcrumbs"
+             cam-breadcrumbs-panel
              divider="&raquo;"
              class="breadcrumbs-panel"></div>
 
