impr(sorting): position dropdowns regarding their container elements
Related to CAM-3466

--- a/client/client/scripts/tasklist/directives/cam-tasklist-sorting-choices.html
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-sorting-choices.html
@@ -48,7 +48,8 @@
 
 
 
-  <li class="dropdown new-sort">
+  <li class="dropdown new-sort"
+      is-open="openDropdownNew">
     <a href
        class="dropdown-toggle">
       <span class="glyphicon glyphicon-plus-sign"
