impr(sorting): disable add/change button when variable name is empty
Related to CAM-3466

--- a/client/client/scripts/tasklist/directives/cam-tasklist-sorting-inputs.html
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-sorting-inputs.html
@@ -4,6 +4,7 @@
            placeholder="{{ 'VARIABLE_NAME' | translate }}"
            class="form-control"
            name="variableName"
+           ng-model="variableName"
            ng-value="sorting.parameters.variable"
            autofocus />
   </div>
@@ -20,6 +21,7 @@
 
   <div class="form-group actions">
     <button ng-click="applySorting($event)"
+            ng-disabled="!variableName"
             class="btn btn-primary btn-sm">
       {{ (sorting ? 'CHANGE' : 'ADD') | translate }}
     </button>
