--- a/client/client/scripts/tasklist/directives/cam-tasklist-sorting-inputs.html
+++ b/client/client/scripts/tasklist/directives/cam-tasklist-sorting-inputs.html
@@ -3,15 +3,13 @@
     <input type="text"
            placeholder="{{ 'VARIABLE_NAME' | translate }}"
            class="form-control"
-           name="variableName"
-           ng-value="sorting.parameters.variable"
+           ng-model="variable"
            autofocus />
   </div>
 
   <div class="form-group">
     <select class="form-control"
-            ng-value="sorting.parameters.type"
-            name="variableType">
+            ng-value="sorting.parameters.type">
       <option ng-repeat="(varType, varText) in variableTypes"
               ng-selected="varType === sorting.parameters.type"
               value="{{ varType }}">{{ varText }}</option>
@@ -20,6 +18,7 @@
 
   <div class="form-group actions">
     <button ng-click="applySorting($event)"
+            ng-disabled="!variable"
             class="btn btn-primary btn-sm">
       {{ (sorting ? 'CHANGE' : 'ADD') | translate }}
     </button>
